--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"systemPrompt": "", "keywordTrigger": false, "modes": {"describe": false, "read": false, "chat": false}}
+{"systemPrompt": "hmmmm", "keywordTrigger": false, "modes": {"describe": false, "read": false, "chat": false}, "responseLength": "medium"}
