--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,18 @@
-{"systemPrompt": "hmmmm", "keywordTrigger": false, "modes": {"describe": false, "read": false, "chat": false}, "responseLength": "medium"}
+{
+    "systemPrompt": "hmmmm",
+    "keywordTrigger": false,
+    "modes": {
+        "describe": false,
+        "read": false,
+        "chat": false
+    },
+    "responseLength": "medium",
+    "Playback Speed": {
+        "setting": "Playback Speed",
+        "value": 1.0
+    },
+    "Device Mode": {
+        "setting": "Device Mode",
+        "value": "Read any important text in this image that can describe important features of this image "
+    }
+}
